Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> PROGRAM MAIN LBRACE body RBRACE
Rule 2     body -> declaration_list statement_list
Rule 3     declaration_list -> declaration
Rule 4     declaration_list -> declaration_list declaration
Rule 5     declaration_list -> empty
Rule 6     declaration -> type_specifier variable_list SEMI
Rule 7     type_specifier -> INT
Rule 8     type_specifier -> BOOL
Rule 9     type_specifier -> STRING
Rule 10    type_specifier -> DOUBLE
Rule 11    type_specifier -> FLOAT
Rule 12    type_specifier -> CHAR
Rule 13    variable_list -> ID
Rule 14    variable_list -> variable_list COMMA ID
Rule 15    variable_list -> assignment
Rule 16    statement_list -> statement
Rule 17    statement_list -> statement_list statement
Rule 18    statement_list -> empty
Rule 19    statement -> assignment SEMI
Rule 20    statement -> print SEMI
Rule 21    statement -> unary
Rule 22    statement -> if_statement
Rule 23    statement -> for_statement
Rule 24    statement -> while_statement
Rule 25    statement -> func_statement_declaration
Rule 26    statement -> func_statement_call
Rule 27    assignment -> ID EQUAL expression
Rule 28    expression -> expression PLUS expression
Rule 29    expression -> expression MINUS expression
Rule 30    expression -> expression TIMES expression
Rule 31    expression -> expression DIVIDE expression
Rule 32    expression -> expression MOD expression
Rule 33    expression -> expression EQ expression
Rule 34    expression -> expression NE expression
Rule 35    expression -> expression LT expression
Rule 36    expression -> expression GT expression
Rule 37    expression -> expression LE expression
Rule 38    expression -> expression GE expression
Rule 39    expression -> NOT expression
Rule 40    expression -> expression AND expression
Rule 41    expression -> expression OR expression
Rule 42    expression -> LPAREN expression RPAREN
Rule 43    expression -> NUMBER
Rule 44    expression -> STRINGVAL
Rule 45    expression -> CHARVAL
Rule 46    expression -> TRUE
Rule 47    expression -> FALSE
Rule 48    expression -> ID
Rule 49    print -> WRITELN LPAREN expression RPAREN
Rule 50    print -> WRITE LPAREN expression RPAREN
Rule 51    unary -> ID INCREMENT SEMI
Rule 52    unary -> ID DECREMENT SEMI
Rule 53    unary -> ID INCREMENT
Rule 54    unary -> ID DECREMENT
Rule 55    if_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 56    if_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 57    for_statement -> FOR LPAREN assignment SEMI expression SEMI unary RPAREN LBRACE statement_list RBRACE
Rule 58    for_statement -> FOR LPAREN assignment SEMI expression SEMI assignment RPAREN LBRACE statement_list RBRACE
Rule 59    while_statement -> WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 60    func_statement_declaration -> VOID ID LPAREN RPAREN LBRACE statement_list RBRACE
Rule 61    func_statement_call -> ID LPAREN RPAREN SEMI
Rule 62    empty -> <empty>

Terminals, with rules where they appear

AND                  : 40
BOOL                 : 8
CHAR                 : 12
CHARVAL              : 45
COMMA                : 14
DECREMENT            : 52 54
DIVIDE               : 31
DOUBLE               : 10
ELSE                 : 55
EQ                   : 33
EQUAL                : 27
FALSE                : 47
FLOAT                : 11
FOR                  : 57 58
GE                   : 38
GT                   : 36
ID                   : 13 14 27 48 51 52 53 54 60 61
IF                   : 55 56
INCREMENT            : 51 53
INT                  : 7
LBRACE               : 1 55 55 56 57 58 59 60
LE                   : 37
LPAREN               : 42 49 50 55 56 57 58 59 60 61
LT                   : 35
MAIN                 : 1
MINUS                : 29
MOD                  : 32
NE                   : 34
NOT                  : 39
NUMBER               : 43
OR                   : 41
PLUS                 : 28
PROGRAM              : 1
RBRACE               : 1 55 55 56 57 58 59 60
RPAREN               : 42 49 50 55 56 57 58 59 60 61
SEMI                 : 6 19 20 51 52 57 57 58 58 61
STRING               : 9
STRINGVAL            : 44
TIMES                : 30
TRUE                 : 46
VOID                 : 60
WHILE                : 59
WRITE                : 50
WRITELN              : 49
error                : 

Nonterminals, with rules where they appear

assignment           : 15 19 57 58 58
body                 : 1
declaration          : 3 4
declaration_list     : 2 4
empty                : 5 18
expression           : 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 40 40 41 41 42 49 50 55 56 57 58 59
for_statement        : 23
func_statement_call  : 26
func_statement_declaration : 25
if_statement         : 22
print                : 20
start                : 0
statement            : 16 17
statement_list       : 2 17 55 55 56 57 58 59 60
type_specifier       : 6
unary                : 21 57
variable_list        : 6 14
while_statement      : 24

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . PROGRAM MAIN LBRACE body RBRACE

    PROGRAM         shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> PROGRAM . MAIN LBRACE body RBRACE

    MAIN            shift and go to state 3


state 3

    (1) start -> PROGRAM MAIN . LBRACE body RBRACE

    LBRACE          shift and go to state 4


state 4

    (1) start -> PROGRAM MAIN LBRACE . body RBRACE
    (2) body -> . declaration_list statement_list
    (3) declaration_list -> . declaration
    (4) declaration_list -> . declaration_list declaration
    (5) declaration_list -> . empty
    (6) declaration -> . type_specifier variable_list SEMI
    (62) empty -> .
    (7) type_specifier -> . INT
    (8) type_specifier -> . BOOL
    (9) type_specifier -> . STRING
    (10) type_specifier -> . DOUBLE
    (11) type_specifier -> . FLOAT
    (12) type_specifier -> . CHAR

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    ID              reduce using rule 62 (empty -> .)
    WRITELN         reduce using rule 62 (empty -> .)
    WRITE           reduce using rule 62 (empty -> .)
    IF              reduce using rule 62 (empty -> .)
    FOR             reduce using rule 62 (empty -> .)
    WHILE           reduce using rule 62 (empty -> .)
    VOID            reduce using rule 62 (empty -> .)
    RBRACE          reduce using rule 62 (empty -> .)
    INT             shift and go to state 10
    BOOL            shift and go to state 11
    STRING          shift and go to state 12
    DOUBLE          shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 15

  ! INT             [ reduce using rule 62 (empty -> .) ]
  ! BOOL            [ reduce using rule 62 (empty -> .) ]
  ! STRING          [ reduce using rule 62 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 62 (empty -> .) ]
  ! FLOAT           [ reduce using rule 62 (empty -> .) ]
  ! CHAR            [ reduce using rule 62 (empty -> .) ]

    body                           shift and go to state 5
    declaration_list               shift and go to state 6
    declaration                    shift and go to state 7
    empty                          shift and go to state 8
    type_specifier                 shift and go to state 9

state 5

    (1) start -> PROGRAM MAIN LBRACE body . RBRACE

    RBRACE          shift and go to state 16


state 6

    (2) body -> declaration_list . statement_list
    (4) declaration_list -> declaration_list . declaration
    (16) statement_list -> . statement
    (17) statement_list -> . statement_list statement
    (18) statement_list -> . empty
    (6) declaration -> . type_specifier variable_list SEMI
    (19) statement -> . assignment SEMI
    (20) statement -> . print SEMI
    (21) statement -> . unary
    (22) statement -> . if_statement
    (23) statement -> . for_statement
    (24) statement -> . while_statement
    (25) statement -> . func_statement_declaration
    (26) statement -> . func_statement_call
    (62) empty -> .
    (7) type_specifier -> . INT
    (8) type_specifier -> . BOOL
    (9) type_specifier -> . STRING
    (10) type_specifier -> . DOUBLE
    (11) type_specifier -> . FLOAT
    (12) type_specifier -> . CHAR
    (27) assignment -> . ID EQUAL expression
    (49) print -> . WRITELN LPAREN expression RPAREN
    (50) print -> . WRITE LPAREN expression RPAREN
    (51) unary -> . ID INCREMENT SEMI
    (52) unary -> . ID DECREMENT SEMI
    (53) unary -> . ID INCREMENT
    (54) unary -> . ID DECREMENT
    (55) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (56) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (57) for_statement -> . FOR LPAREN assignment SEMI expression SEMI unary RPAREN LBRACE statement_list RBRACE
    (58) for_statement -> . FOR LPAREN assignment SEMI expression SEMI assignment RPAREN LBRACE statement_list RBRACE
    (59) while_statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (60) func_statement_declaration -> . VOID ID LPAREN RPAREN LBRACE statement_list RBRACE
    (61) func_statement_call -> . ID LPAREN RPAREN SEMI

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for WRITELN resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
    RBRACE          reduce using rule 62 (empty -> .)
    INT             shift and go to state 10
    BOOL            shift and go to state 11
    STRING          shift and go to state 12
    DOUBLE          shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 15
    ID              shift and go to state 29
    WRITELN         shift and go to state 30
    WRITE           shift and go to state 31
    IF              shift and go to state 32
    FOR             shift and go to state 33
    WHILE           shift and go to state 34
    VOID            shift and go to state 35

  ! ID              [ reduce using rule 62 (empty -> .) ]
  ! WRITELN         [ reduce using rule 62 (empty -> .) ]
  ! WRITE           [ reduce using rule 62 (empty -> .) ]
  ! IF              [ reduce using rule 62 (empty -> .) ]
  ! FOR             [ reduce using rule 62 (empty -> .) ]
  ! WHILE           [ reduce using rule 62 (empty -> .) ]
  ! VOID            [ reduce using rule 62 (empty -> .) ]

    statement_list                 shift and go to state 17
    declaration                    shift and go to state 18
    statement                      shift and go to state 19
    empty                          shift and go to state 20
    type_specifier                 shift and go to state 9
    assignment                     shift and go to state 21
    print                          shift and go to state 22
    unary                          shift and go to state 23
    if_statement                   shift and go to state 24
    for_statement                  shift and go to state 25
    while_statement                shift and go to state 26
    func_statement_declaration     shift and go to state 27
    func_statement_call            shift and go to state 28

state 7

    (3) declaration_list -> declaration .

    INT             reduce using rule 3 (declaration_list -> declaration .)
    BOOL            reduce using rule 3 (declaration_list -> declaration .)
    STRING          reduce using rule 3 (declaration_list -> declaration .)
    DOUBLE          reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    CHAR            reduce using rule 3 (declaration_list -> declaration .)
    ID              reduce using rule 3 (declaration_list -> declaration .)
    WRITELN         reduce using rule 3 (declaration_list -> declaration .)
    WRITE           reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    FOR             reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    RBRACE          reduce using rule 3 (declaration_list -> declaration .)


state 8

    (5) declaration_list -> empty .

    INT             reduce using rule 5 (declaration_list -> empty .)
    BOOL            reduce using rule 5 (declaration_list -> empty .)
    STRING          reduce using rule 5 (declaration_list -> empty .)
    DOUBLE          reduce using rule 5 (declaration_list -> empty .)
    FLOAT           reduce using rule 5 (declaration_list -> empty .)
    CHAR            reduce using rule 5 (declaration_list -> empty .)
    ID              reduce using rule 5 (declaration_list -> empty .)
    WRITELN         reduce using rule 5 (declaration_list -> empty .)
    WRITE           reduce using rule 5 (declaration_list -> empty .)
    IF              reduce using rule 5 (declaration_list -> empty .)
    FOR             reduce using rule 5 (declaration_list -> empty .)
    WHILE           reduce using rule 5 (declaration_list -> empty .)
    VOID            reduce using rule 5 (declaration_list -> empty .)
    RBRACE          reduce using rule 5 (declaration_list -> empty .)


state 9

    (6) declaration -> type_specifier . variable_list SEMI
    (13) variable_list -> . ID
    (14) variable_list -> . variable_list COMMA ID
    (15) variable_list -> . assignment
    (27) assignment -> . ID EQUAL expression

    ID              shift and go to state 37

    variable_list                  shift and go to state 36
    assignment                     shift and go to state 38

state 10

    (7) type_specifier -> INT .

    ID              reduce using rule 7 (type_specifier -> INT .)


state 11

    (8) type_specifier -> BOOL .

    ID              reduce using rule 8 (type_specifier -> BOOL .)


state 12

    (9) type_specifier -> STRING .

    ID              reduce using rule 9 (type_specifier -> STRING .)


state 13

    (10) type_specifier -> DOUBLE .

    ID              reduce using rule 10 (type_specifier -> DOUBLE .)


state 14

    (11) type_specifier -> FLOAT .

    ID              reduce using rule 11 (type_specifier -> FLOAT .)


state 15

    (12) type_specifier -> CHAR .

    ID              reduce using rule 12 (type_specifier -> CHAR .)


state 16

    (1) start -> PROGRAM MAIN LBRACE body RBRACE .

    $end            reduce using rule 1 (start -> PROGRAM MAIN LBRACE body RBRACE .)


state 17

    (2) body -> declaration_list statement_list .
    (17) statement_list -> statement_list . statement
    (19) statement -> . assignment SEMI
    (20) statement -> . print SEMI
    (21) statement -> . unary
    (22) statement -> . if_statement
    (23) statement -> . for_statement
    (24) statement -> . while_statement
    (25) statement -> . func_statement_declaration
    (26) statement -> . func_statement_call
    (27) assignment -> . ID EQUAL expression
    (49) print -> . WRITELN LPAREN expression RPAREN
    (50) print -> . WRITE LPAREN expression RPAREN
    (51) unary -> . ID INCREMENT SEMI
    (52) unary -> . ID DECREMENT SEMI
    (53) unary -> . ID INCREMENT
    (54) unary -> . ID DECREMENT
    (55) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (56) if_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (57) for_statement -> . FOR LPAREN assignment SEMI expression SEMI unary RPAREN LBRACE statement_list RBRACE
    (58) for_statement -> . FOR LPAREN assignment SEMI expression SEMI assignment RPAREN LBRACE statement_list RBRACE
    (59) while_statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (60) func_statement_declaration -> . VOID ID LPAREN RPAREN LBRACE statement_list RBRACE
    (61) func_statement_call -> . ID LPAREN RPAREN SEMI

    RBRACE          reduce using rule 2 (body -> declaration_list statement_list .)
    ID              shift and go to state 29
    WRITELN         shift and go to state 30
    WRITE           shift and go to state 31
    IF              shift and go to state 32
    FOR             shift and go to state 33
    WHILE           shift and go to state 34
    VOID            shift and go to state 35

    statement                      shift and go to state 39
    assignment                     shift and go to state 21
    print                          shift and go to state 22
    unary                          shift and go to state 23
    if_statement                   shift and go to state 24
    for_statement                  shift and go to state 25
    while_statement                shift and go to state 26
    func_statement_declaration     shift and go to state 27
    func_statement_call            shift and go to state 28

state 18

    (4) declaration_list -> declaration_list declaration .

    INT             reduce using rule 4 (declaration_list -> declaration_list declaration .)
    BOOL            reduce using rule 4 (declaration_list -> declaration_list declaration .)
    STRING          reduce using rule 4 (declaration_list -> declaration_list declaration .)
    DOUBLE          reduce using rule 4 (declaration_list -> declaration_list declaration .)
    FLOAT           reduce using rule 4 (declaration_list -> declaration_list declaration .)
    CHAR            reduce using rule 4 (declaration_list -> declaration_list declaration .)
    ID              reduce using rule 4 (declaration_list -> declaration_list declaration .)
    WRITELN         reduce using rule 4 (declaration_list -> declaration_list declaration .)
    WRITE           reduce using rule 4 (declaration_list -> declaration_list declaration .)
    IF              reduce using rule 4 (declaration_list -> declaration_list declaration .)
    FOR             reduce using rule 4 (declaration_list -> declaration_list declaration .)
    WHILE           reduce using rule 4 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 4 (declaration_list -> declaration_list declaration .)
    RBRACE          reduce using rule 4 (declaration_list -> declaration_list declaration .)


state 19

    (16) statement_list -> statement .

    ID              reduce using rule 16 (statement_list -> statement .)
    WRITELN         reduce using rule 16 (statement_list -> statement .)
    WRITE           reduce using rule 16 (statement_list -> statement .)
    IF              reduce using rule 16 (statement_list -> statement .)
    FOR             reduce using rule 16 (statement_list -> statement .)
    WHILE           reduce using rule 16 (statement_list -> statement .)
    VOID            reduce using rule 16 (statement_list -> statement .)
    RBRACE          reduce using rule 16 (statement_list -> statement .)


state 20

    (18) statement_list -> empty .

    ID              reduce using rule 18 (statement_list -> empty .)
    WRITELN         reduce using rule 18 (statement_list -> empty .)
    WRITE           reduce using rule 18 (statement_list -> empty .)
    IF              reduce using rule 18 (statement_list -> empty .)
    FOR             reduce using rule 18 (statement_list -> empty .)
    WHILE           reduce using rule 18 (statement_list -> empty .)
    VOID            reduce using rule 18 (statement_list -> empty .)
    RBRACE          reduce using rule 18 (statement_list -> empty .)


state 21

    (19) statement -> assignment . SEMI

    SEMI            shift and go to state 40


state 22

    (20) statement -> print . SEMI

    SEMI            shift and go to state 41


state 23

    (21) statement -> unary .

    ID              reduce using rule 21 (statement -> unary .)
    WRITELN         reduce using rule 21 (statement -> unary .)
    WRITE           reduce using rule 21 (statement -> unary .)
    IF              reduce using rule 21 (statement -> unary .)
    FOR             reduce using rule 21 (statement -> unary .)
    WHILE           reduce using rule 21 (statement -> unary .)
    VOID            reduce using rule 21 (statement -> unary .)
    RBRACE          reduce using rule 21 (statement -> unary .)


state 24

    (22) statement -> if_statement .

    ID              reduce using rule 22 (statement -> if_statement .)
    WRITELN         reduce using rule 22 (statement -> if_statement .)
    WRITE           reduce using rule 22 (statement -> if_statement .)
    IF              reduce using rule 22 (statement -> if_statement .)
    FOR             reduce using rule 22 (statement -> if_statement .)
    WHILE           reduce using rule 22 (statement -> if_statement .)
    VOID            reduce using rule 22 (statement -> if_statement .)
    RBRACE          reduce using rule 22 (statement -> if_statement .)


state 25

    (23) statement -> for_statement .

    ID              reduce using rule 23 (statement -> for_statement .)
    WRITELN         reduce using rule 23 (statement -> for_statement .)
    WRITE           reduce using rule 23 (statement -> for_statement .)
    IF              reduce using rule 23 (statement -> for_statement .)
    FOR             reduce using rule 23 (statement -> for_statement .)
    WHILE           reduce using rule 23 (statement -> for_statement .)
    VOID            reduce using rule 23 (statement -> for_statement .)
    RBRACE          reduce using rule 23 (statement -> for_statement .)


state 26

    (24) statement -> while_statement .

    ID              reduce using rule 24 (statement -> while_statement .)
    WRITELN         reduce using rule 24 (statement -> while_statement .)
    WRITE           reduce using rule 24 (statement -> while_statement .)
    IF              reduce using rule 24 (statement -> while_statement .)
    FOR             reduce using rule 24 (statement -> while_statement .)
    WHILE           reduce using rule 24 (statement -> while_statement .)
    VOID            reduce using rule 24 (statement -> while_statement .)
    RBRACE          reduce using rule 24 (statement -> while_statement .)


state 27

    (25) statement -> func_statement_declaration .

    ID              reduce using rule 25 (statement -> func_statement_declaration .)
    WRITELN         reduce using rule 25 (statement -> func_statement_declaration .)
    WRITE           reduce using rule 25 (statement -> func_statement_declaration .)
    IF              reduce using rule 25 (statement -> func_statement_declaration .)
    FOR             reduce using rule 25 (statement -> func_statement_declaration .)
    WHILE           reduce using rule 25 (statement -> func_statement_declaration .)
    VOID            reduce using rule 25 (statement -> func_statement_declaration .)
    RBRACE          reduce using rule 25 (statement -> func_statement_declaration .)


state 28

    (26) statement -> func_statement_call .

    ID              reduce using rule 26 (statement -> func_statement_call .)
    WRITELN         reduce using rule 26 (statement -> func_statement_call .)
    WRITE           reduce using rule 26 (statement -> func_statement_call .)
    IF              reduce using rule 26 (statement -> func_statement_call .)
    FOR             reduce using rule 26 (statement -> func_statement_call .)
    WHILE           reduce using rule 26 (statement -> func_statement_call .)
    VOID            reduce using rule 26 (statement -> func_statement_call .)
    RBRACE          reduce using rule 26 (statement -> func_statement_call .)


state 29

    (27) assignment -> ID . EQUAL expression
    (51) unary -> ID . INCREMENT SEMI
    (52) unary -> ID . DECREMENT SEMI
    (53) unary -> ID . INCREMENT
    (54) unary -> ID . DECREMENT
    (61) func_statement_call -> ID . LPAREN RPAREN SEMI

    EQUAL           shift and go to state 42
    INCREMENT       shift and go to state 43
    DECREMENT       shift and go to state 44
    LPAREN          shift and go to state 45


state 30

    (49) print -> WRITELN . LPAREN expression RPAREN

    LPAREN          shift and go to state 46


state 31

    (50) print -> WRITE . LPAREN expression RPAREN

    LPAREN          shift and go to state 47


state 32

    (55) if_statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (56) if_statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 48


state 33

    (57) for_statement -> FOR . LPAREN assignment SEMI expression SEMI unary RPAREN LBRACE statement_list RBRACE
    (58) for_statement -> FOR . LPAREN assignment SEMI expression SEMI assignment RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 49


state 34

    (59) while_statement -> WHILE . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 50


state 35

    (60) func_statement_declaration -> VOID . ID LPAREN RPAREN LBRACE statement_list RBRACE

    ID              shift and go to state 51


state 36

    (6) declaration -> type_specifier variable_list . SEMI
    (14) variable_list -> variable_list . COMMA ID

    SEMI            shift and go to state 52
    COMMA           shift and go to state 53


state 37

    (13) variable_list -> ID .
    (27) assignment -> ID . EQUAL expression

    SEMI            reduce using rule 13 (variable_list -> ID .)
    COMMA           reduce using rule 13 (variable_list -> ID .)
    EQUAL           shift and go to state 42


state 38

    (15) variable_list -> assignment .

    SEMI            reduce using rule 15 (variable_list -> assignment .)
    COMMA           reduce using rule 15 (variable_list -> assignment .)


state 39

    (17) statement_list -> statement_list statement .

    ID              reduce using rule 17 (statement_list -> statement_list statement .)
    WRITELN         reduce using rule 17 (statement_list -> statement_list statement .)
    WRITE           reduce using rule 17 (statement_list -> statement_list statement .)
    IF              reduce using rule 17 (statement_list -> statement_list statement .)
    FOR             reduce using rule 17 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 17 (statement_list -> statement_list statement .)
    VOID            reduce using rule 17 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 17 (statement_list -> statement_list statement .)


state 40

    (19) statement -> assignment SEMI .

    ID              reduce using rule 19 (statement -> assignment SEMI .)
    WRITELN         reduce using rule 19 (statement -> assignment SEMI .)
    WRITE           reduce using rule 19 (statement -> assignment SEMI .)
    IF              reduce using rule 19 (statement -> assignment SEMI .)
    FOR             reduce using rule 19 (statement -> assignment SEMI .)
    WHILE           reduce using rule 19 (statement -> assignment SEMI .)
    VOID            reduce using rule 19 (statement -> assignment SEMI .)
    RBRACE          reduce using rule 19 (statement -> assignment SEMI .)


state 41

    (20) statement -> print SEMI .

    ID              reduce using rule 20 (statement -> print SEMI .)
    WRITELN         reduce using rule 20 (statement -> print SEMI .)
    WRITE           reduce using rule 20 (statement -> print SEMI .)
    IF              reduce using rule 20 (statement -> print SEMI .)
    FOR             reduce using rule 20 (statement -> print SEMI .)
    WHILE           reduce using rule 20 (statement -> print SEMI .)
    VOID            reduce using rule 20 (statement -> print SEMI .)
    RBRACE          reduce using rule 20 (statement -> print SEMI .)


state 42

    (27) assignment -> ID EQUAL . expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression EQ expression
    (34) expression -> . expression NE expression
    (35) expression -> . expression LT expression
    (36) expression -> . expression GT expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression GE expression
    (39) expression -> . NOT expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . LPAREN expression RPAREN
    (43) expression -> . NUMBER
    (44) expression -> . STRINGVAL
    (45) expression -> . CHARVAL
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . ID

    NOT             shift and go to state 56
    LPAREN          shift and go to state 57
    NUMBER          shift and go to state 58
    STRINGVAL       shift and go to state 59
    CHARVAL         shift and go to state 60
    TRUE            shift and go to state 61
    FALSE           shift and go to state 62
    ID              shift and go to state 54

    expression                     shift and go to state 55

state 43

    (51) unary -> ID INCREMENT . SEMI
    (53) unary -> ID INCREMENT .

    SEMI            shift and go to state 63
    ID              reduce using rule 53 (unary -> ID INCREMENT .)
    WRITELN         reduce using rule 53 (unary -> ID INCREMENT .)
    WRITE           reduce using rule 53 (unary -> ID INCREMENT .)
    IF              reduce using rule 53 (unary -> ID INCREMENT .)
    FOR             reduce using rule 53 (unary -> ID INCREMENT .)
    WHILE           reduce using rule 53 (unary -> ID INCREMENT .)
    VOID            reduce using rule 53 (unary -> ID INCREMENT .)
    RBRACE          reduce using rule 53 (unary -> ID INCREMENT .)
    RPAREN          reduce using rule 53 (unary -> ID INCREMENT .)


state 44

    (52) unary -> ID DECREMENT . SEMI
    (54) unary -> ID DECREMENT .

    SEMI            shift and go to state 64
    ID              reduce using rule 54 (unary -> ID DECREMENT .)
    WRITELN         reduce using rule 54 (unary -> ID DECREMENT .)
    WRITE           reduce using rule 54 (unary -> ID DECREMENT .)
    IF              reduce using rule 54 (unary -> ID DECREMENT .)
    FOR             reduce using rule 54 (unary -> ID DECREMENT .)
    WHILE           reduce using rule 54 (unary -> ID DECREMENT .)
    VOID            reduce using rule 54 (unary -> ID DECREMENT .)
    RBRACE          reduce using rule 54 (unary -> ID DECREMENT .)
    RPAREN          reduce using rule 54 (unary -> ID DECREMENT .)


state 45

    (61) func_statement_call -> ID LPAREN . RPAREN SEMI

    RPAREN          shift and go to state 65


state 46

    (49) print -> WRITELN LPAREN . expression RPAREN
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression EQ expression
    (34) expression -> . expression NE expression
    (35) expression -> . expression LT expression
    (36) expression -> . expression GT expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression GE expression
    (39) expression -> . NOT expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . LPAREN expression RPAREN
    (43) expression -> . NUMBER
    (44) expression -> . STRINGVAL
    (45) expression -> . CHARVAL
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . ID

    NOT             shift and go to state 56
    LPAREN          shift and go to state 57
